--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.12.0",
+    "mockjs": "^1.1.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-jsonp": "^0.1.8",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
